// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PostCard does not render excerpt when explicitly null 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1c1541m"
          >
            <div
              class="css-hizx0c"
            >
              Personal
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard does not render excerpt when explicitly undefined 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1c1541m"
          >
            <div
              class="css-hizx0c"
            >
              Personal
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard matches the snapshot without excerpt 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1c1541m"
          >
            <div
              class="css-hizx0c"
            >
              Personal
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders SoundCloud embed when soundcloudId is provided 1`] = `
<DocumentFragment>
  <div
    class="css-19u1k6h"
  >
    <div
      class="css-11wrqrg"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="css-2wrb05"
        >
          <a
            class="css-r3e7ui"
            href="/music/a-house-is-not-a-home"
          >
            <h3
              class="css-u4a60g"
            >
              A House Is Not A Home
            </h3>
          </a>
          <div
            class="css-1wohmj5"
          >
            <div
              class="css-hizx0c"
            >
              Music
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              2024-05-12
            </time>
          </div>
        </div>
        <div
          class="card-soundcloud css-12ixrq5"
        >
          <iframe
            allow="autoplay"
            class="css-1ak6ou3"
            frameborder="no"
            scrolling="no"
            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1820395353&color=%23ff5500&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"
            title="A House Is Not A Home"
            width="100%"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PostCard renders YouTube embed when youtubeSrc is provided 1`] = `
<DocumentFragment>
  <div
    class="css-19u1k6h"
  >
    <div
      class="css-11wrqrg"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="css-2wrb05"
        >
          <a
            class="css-r3e7ui"
            href="/music/here-and-now"
          >
            <h3
              class="css-u4a60g"
            >
              Here and Now
            </h3>
          </a>
          <div
            class="css-1wohmj5"
          >
            <div
              class="css-hizx0c"
            >
              Music
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              2025-06-19
            </time>
          </div>
        </div>
        <div
          class="card-youtube css-tncxj7"
        >
          <div
            class="youtube-mock"
            data-compact="true"
            data-title="Here and Now"
            data-url="https://www.youtube.com/embed/OMiKQ2XHXYU?rel=0&modestbranding=1"
          >
            <iframe
              src="https://www.youtube.com/embed/OMiKQ2XHXYU?rel=0&modestbranding=1"
              title="Here and Now"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PostCard renders YouTube embed with horizontal layout when both props are provided 1`] = `
<DocumentFragment>
  <div
    class="css-19u1k6h"
  >
    <div
      class="css-11wrqrg"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="css-2wrb05"
        >
          <a
            class="css-r3e7ui"
            href="/music/here-and-now"
          >
            <h3
              class="css-2ctqs3"
            >
              Here and Now
            </h3>
          </a>
          <div
            class="css-1wohmj5"
          >
            <div
              class="css-hizx0c"
            >
              Music
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              2025-06-19
            </time>
          </div>
        </div>
        <div
          class="card-youtube css-tncxj7"
        >
          <div
            class="youtube-mock"
            data-compact="true"
            data-title="Here and Now"
            data-url="https://www.youtube.com/embed/OMiKQ2XHXYU?rel=0&modestbranding=1"
          >
            <iframe
              src="https://www.youtube.com/embed/OMiKQ2XHXYU?rel=0&modestbranding=1"
              title="Here and Now"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PostCard renders as image-only recap when isRecap prop is true 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1c1541m"
          >
            <div
              class="css-hizx0c"
            >
              Personal
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders banner when thumbnails array is empty 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1c1541m"
          >
            <div
              class="css-hizx0c"
            >
              Personal
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders banner when thumbnails is null 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1c1541m"
          >
            <div
              class="css-hizx0c"
            >
              Personal
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders excerpt when provided 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1wohmj5"
          >
            <div
              class="css-hizx0c"
            >
              Personal
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
          <p
            class="description css-1w28v9e"
          >
            This is a sample excerpt for the blog post.
          </p>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders in horizontal layout when horizontal prop is true 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="css-ca6t5a"
        >
          <h3
            class="css-1ndafw1"
          >
            My Blog Post
          </h3>
          <div
            aria-hidden="true"
            class="card-headline-preview css-iq27yv"
          />
        </div>
        <div
          class="css-1c1541m"
        >
          <div
            class="css-hizx0c"
          >
            Personal
          </div>
          <span
            class="css-1vjle4a"
          >
            •
          </span>
          <time
            class="created css-4np19s"
          >
            1592202624
          </time>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders neither banner nor thumbnails when both are missing 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1c1541m"
          >
            <div
              class="css-hizx0c"
            >
              Personal
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders thumbnails instead of banner when thumbnails are provided (vertical mode) 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="card-thumbnails css-1usooy4"
        >
          <div
            class="css-nequny"
          >
            <div
              class="css-2g58l9"
            >
              <div
                class="css-dw25a5"
              />
            </div>
            <div
              class="css-wmbcu5"
            >
              <div
                class="css-oc1to0"
              />
            </div>
            <div
              class="css-2g58l9"
            >
              <div
                class="css-18hamqk"
              />
            </div>
            <div
              class="css-wmbcu5"
            >
              <div
                class="css-k85nx7"
              />
            </div>
          </div>
        </div>
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1c1541m"
          >
            <div
              class="css-hizx0c"
            >
              Personal
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders without banner when not provided 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1c1541m"
          >
            <div
              class="css-hizx0c"
            >
              Personal
            </div>
            <span
              class="css-1vjle4a"
            >
              •
            </span>
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders without category when not provided 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-2wrb05"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <div
            class="css-1c1541m"
          >
            <time
              class="created css-4np19s"
            >
              1592202624
            </time>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard uses first thumbnail as left preview in horizontal mode (no thumbnail row) 1`] = `
<DocumentFragment>
  <a
    class="css-13uc2z5"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-7ttn8j"
      >
        <div
          class="css-ca6t5a"
        >
          <h3
            class="css-1ndafw1"
          >
            My Blog Post
          </h3>
          <div
            aria-hidden="true"
            class="card-headline-preview css-cc19g2"
          />
        </div>
        <div
          class="css-1c1541m"
        >
          <div
            class="css-hizx0c"
          >
            Personal
          </div>
          <span
            class="css-1vjle4a"
          >
            •
          </span>
          <time
            class="created css-4np19s"
          >
            1592202624
          </time>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;
